--- a/tips.html
+++ b/tips.html
@@ -5,7 +5,7 @@
 	<title>Traveler's diary</title>
 	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 	<link rel="stylesheet" href="style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="jQuery.js"></script>
 </head>
 
 <body>
@@ -19,7 +19,6 @@
 		<a href="index.html"> <li>Home</li></a>
 		<a href="gallery.html"> <li>Gallery</li></a>
 		<a href="tips.html"> <li>Tips and Ideas</li></a>
-		<a href="contact.html"> <li>Contact</li></a>
 	</ul>
 </div>
 
