--- a/gallery.html
+++ b/gallery.html
@@ -4,16 +4,25 @@
 	<meta charset="UTF-8">
 	<title>Traveler's diary</title>
 	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="style.css">
 	<script src="jQuery.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 </head>
 
-<body>
 
+
+<body>
 <div id="title">
 	<h1>Traveler's diary</h1>
 </div>
 
+
+<header>
+	<button class="btn">&#9776;</button>
+	<button class="exit">&#735;</button>
+</header>
 
 <div id="navi">
 	<ul>
@@ -23,6 +32,48 @@
 	</ul>
 </div>
 
-</body>
 
+
+
+
+<div id="footer">
+	<div id="social">
+		<div id="one">
+			<a href="http://www.facebook.com"><img src="Icons/Facebook.png"></a>
+		</div>
+		<div id="two">
+			<a href="http://www.twitter.com"><img src="Icons/Twitter.png"></a>
+		</div>
+		<div id="three">
+			<a href="http://www.instagram.com"><img src="Icons/Instagram.png"></a>
+		</div>
+		<div id="four">
+			<a href="http://www.Pinterest.com"><img src="Icons/Tumblr.png"></a>
+		</div>
+	</div>
+</div>
+
+	
+
+<script>
+	$(document).ready(function() {
+		$( ".btn" ).click(function() {
+		$( "#navi" ).slideToggle();
+			$( ".btn" ).hide();
+			$( ".exit" ).show();
+		});
+	
+		$( ".exit" ).click(function() {
+		$( "#navi" ).slideToggle();
+			$( ".exit" ).hide();
+			$( ".btn" ).show();
+		});
+
+
+	});
+
+</script>
+
+
+</body>
 </html>
