--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
 	<link rel="stylesheet" href="bootstrap.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="mobile.css">
+	<script src="bootstrap.js"></script>
 	<script src="jQuery.js"></script>
 	<script src="FlexSlider/jquery.flexslider.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
 </head>
 
 
@@ -24,6 +25,7 @@
 	<button class="btn">&#9776;</button>
 	<button class="exit">&#735;</button>
 </header>
+
 
 <div id="navi">
 	<ul>
@@ -54,67 +56,52 @@
 
 
 <div id="pics">
-	<div class="box">
-		<a href="#swiggity"><img id="pic1" src="images/curacao.jpg" />
-		</a>
-	</div>
-	
+		<a href="#swiggity"><img id="pic1" src="images/curacao.jpg" /></a>
 
-	<div class="box">
 		<a href="#swdn"><img id="pic2" src="images/sweden.png" /> </a>
-	</div>
+
+		<a href="#malay"><img id="pic3" src="images/kuala.jpg" /> </a>
 	
-
-	<div class="box">
-	<a href="#malay"><img id="pic3" src="images/kuala.jpg" /> </a>
-	</div>
-
-
-	<div class="box">
 		<a href="#lucia"><img id="pic4" src="images/lucia.jpg" /> </a>
-	</div>
-
-
-	<div class="box">
-		<a href="#italia"><img id="pic5" src="images/Barrea.jpg" />
-	</div>
 	
+		<a href="#italia"><img id="pic5" src="images/Barrea.jpg" />	
 </div>
 
 
 <div id="content">
-<div class="contentspace">
-<a id="swiggity"><h1>Curaçao</h1></a>
+	<div class="contentspace">
+		<a id="swiggity"><h1>Curaçao</h1></a>
 		<p>Home to more than 35 captivating beaches, a diverse heritage spanning 55 different cultures, 'live and let live' attitude and unrivaled European architecture; Curaçao remains one of the most exceptional islands of the region. Its capital city, Willemstad — a UNESCO World Heritage site — with its iconic colorful Handelskade backdrop and roster of museums, monuments, flavorful restaurants and shopping, was selected in 2013 as one of the Top 5 Cities in the Caribbean by Condé Nast Traveler's readers.  Curaçao's natural beauty, pristine diving and snorkeling sites are a favorite with divers and adventure seekers, and its beaches and idyllic weather, situated on the outer fringes of the Hurricane Belt, has won it further accolade and recognition.
-	</p>
-</div>
+		</p>
+	</div>
 
-<div class="contentspace">
-	<a id="swdn"><h1>Sweden</h1></a>
+	<div class="contentspace">
+		<a id="swdn"><h1>Sweden</h1></a>
 		<p>In some ways, visiting Sweden feels like walking right into a fashion or home-decor magazine. There are no boring outfits on the streets of Stockholm, and the care with which houses, cottages, cafes and public spaces are decorated and kept up throughout the country is truly inspiring. But Swedish style is never too showy; form and function are tightly linked in this society known for valuing moderation, practicality, order, simple lines and clever designs. Whether you decide to shop for your own versions or just enjoy the scenery, it’s hard not to fall for the cool aesthetics of this place.
-	</p>
-</div>
+		</p>
+	</div>
 
-<div class="contentspace">
-	<a id="malay"><h1>Malaysia</h1></a>
+	<div class="contentspace">
+		<a id="malay"><h1>Malaysia</h1></a>
 		<p>To know Malaysia is to love Malaysia - a bubbling, bustling melting-pot of races and religions where Malays, Indians, Chinese and many other ethnic groups live together in peace and harmony. Our multiculturalism has made Malaysia a gastronomical paradise and home to hundreds of colourful festivals. It's no wonder that we love celebrating and socialising. As a people, Malaysians are very relaxed, warm and friendly. 
 
 		One of Malaysia's key attractions is its extreme contrasts which further add to this theme of 	‘diversity’. Towering skyscrapers look down upon wooden houses built on stilts while five-star hotels sit just metres away from ancient reefs. 
 
 		Rugged mountains reach dramatically for the sky while their rainforest-clad slopes sweep down to floodplains teeming with forest life. Cool highland hideaways roll down to warm, sandy beaches and rich, humid mangroves. 
-	</p>
-</div>
+		</p>
+	</div>
 
-<div class="contentspace">
-	<a id="lucia"><h1>St. Lucia</h1></a>
+	<div class="contentspace">
+		<a id="lucia"><h1>St. Lucia</h1></a>
 		<p>Where can you wake up to a symphony of birds and drive through a volcano? Only on St. Lucia island! St. Lucia stands apart from the rest of the Caribbean islands thanks to its varied landscape and diverse culture and cuisine, which is distinguished by African, Indian, Caribbean, British, Spanish and French influences. You can explore everything from the Piton Mountains and rainforest to the Sulphur Springs of Soufriere and the Caribbean coral reef on this 238 square-mile island in paradise. There are so many reasons to choose St. Lucia island!
-		 The active traveler can snorkel in the refreshing Caribbean Sea, hike to the top of the Gros Piton or Petite Piton peaks, or take advantage of a wide range of water sports available at their St. Lucia Resort. The foodie can indulge in fresh local flavors by stopping at roadside stands or dining at five-star restaurants. Romantic couples can relax on the white sand of a pristine beach or in a mud bath before going on a one-of-a-kind date at one of St. Lucia’s music or cultural festivals.  Whatever your preference, your St. Lucia island vacation will be nothing but smooth sailing!	</p>
-</div>
+		 The active traveler can snorkel in the refreshing Caribbean Sea, hike to the top of the Gros Piton or Petite Piton peaks, or take advantage of a wide range of water sports available at their St. Lucia Resort. The foodie can indulge in fresh local flavors by stopping at roadside stands or dining at five-star restaurants. Romantic couples can relax on the white sand of a pristine beach or in a mud bath before going on a one-of-a-kind date at one of St. Lucia’s music or cultural festivals.  Whatever your preference, your St. Lucia island vacation will be nothing but smooth sailing!	
+		 </p>
+	</div>
 
-<div class="contentspace">
-	<a id="italia"><h1>Italy</h1></a>
+	<div class="contentspace">
+		<a id="italia"><h1>Italy</h1></a>
 		<p>Italy is the kind of destination that travelers return to over and over. They come for awe-inspiring art and architecture that influenced Western civilization, and stunning historical ruins—as well as for some of the world's best food and wine. Also beckoning irresistibly are Italy's sun-kissed olive groves and vineyards, the sparkling waters of Lake Como and the Mediterranean, and atmospheric monasteries, castles, and farmhouses. And if you seek vibrant cities with renowned museums, restaurants, and shopping opportunities, Rome, Florence, and Milan await.</p>
-</div>
+	</div>
 </div>
 
 
@@ -172,54 +159,63 @@
 
 
 <div class="line">
-	<h2> Articles </h2>
+	<h2 id="articleBreak"> Articles </h2>
 </div>
 
 
 <div id="articles">
-	
-	<div class="a1"><a href="http://www.travelandleisure.com/slideshows/worlds-best-cities" TARGET="_blank"><img src="images/top10.jpg"/></a></div>
+	<div class="a1">
+		<h3>Top 10 Cities to visit</h3>
+			<a href="http://www.travelandleisure.com/slideshows/worlds-best-cities" TARGET="_blank">
+				<img src="images/top10.jpg"/></a>
+	</div>
 
+	<div class="a1">
+		<h3>World's best islands</h3>
+			<a href="http://www.travelandleisure.com/slideshows/worlds-best-islands" TARGET="_blank">
+				<img src="images/malta.jpg"/></a>
+	</div>
 
-	<div class="a1"><a href="http://www.travelandleisure.com/slideshows/worlds-best-islands" TARGET="_blank"><img src="images/malta.jpg"/></a></div>
+	<div class="a1">
+		<h3>Trips of a lifetime</h3>
+			<a href="http://www.travelandleisure.com/slideshows/trips-of-a-lifetime" TARGET="_blank">
+				<img src="images/lifetime.jpg"/></a>
+	</div>
 
-
-	<div class="a2"><a href="http://www.travelandleisure.com/slideshows/trips-of-a-lifetime" TARGET="_blank"><img src="images/lifetime.jpg"/></a></div>
-
-
-	<div class="a2"><a href="http://www.travelandleisure.com/slideshows/worlds-best-hotels" TARGET="_blank"><img src="images/hotels.jpg"/></a></div>
-
+	<div class="a1">
+		<h3>World's best hotels</h3>
+			<a href="http://www.travelandleisure.com/slideshows/worlds-best-hotels" TARGET="_blank">
+				<img src="images/hotels.jpg"/></a>
+	</div>
 </div>
-
 
 
 <div id="footer">
 	<div id="social">
-		<div id="one">
+		<div class="icons">
 			<a href="http://www.facebook.com"><img src="Icons/Facebook.png"></a>
 		</div>
-		<div id="two">
+		<div class="icons">
 			<a href="http://www.twitter.com"><img src="Icons/Twitter.png"></a>
 		</div>
-		<div id="three">
+		<div class="icons">
 			<a href="http://www.instagram.com"><img src="Icons/Instagram.png"></a>
 		</div>
-		<div id="four">
+		<div class="icons">
 			<a href="http://www.Pinterest.com"><img src="Icons/Tumblr.png"></a>
 		</div>
 
-<div class="mail">
-	<h5>Join our mailing list for the latest in travel news!</h5>
-					<tr>
-						<td>Email:</td>
-						<td><input type="text"></td>
-					</tr>
-	
-						<td>
-						<input type="button" value="Submit"/>
-						</td>
-				<h6>&copy; Zalini 2015</h6>
-</div>
+		<div class="mail">
+			<h5>Join our mailing list for the latest in travel news!</h5>
+				<tr>
+					<td>Email:</td>
+					<td><input type="text"></td>
+				</tr>
+				<tr>
+					<td><input type="button" value="Submit"/></td>
+				</tr>
+			<h6>&copy; Zalini 2015</h6>
+		</div>
 </div>
 
 	
@@ -237,13 +233,6 @@
 			$( ".exit" ).hide();
 			$( ".btn" ).show();
 	});
-
-
-
-		$(".imgcap").mouseover(function(){
-			$(this).fadeOut();
-		});
-
 
 
 		 $("#pic1").mouseover(function() {
@@ -280,10 +269,8 @@
    			 animation: "slide",
    			 slideshowSpeed:  10000
  		});	
-
-
+	
 	});
-
 </script>
 
 
