--- a/index.html
+++ b/index.html
@@ -40,27 +40,38 @@
 
 <div>
 	<ul>
-		<li class="titles col-xs-3 col-md-3 ">Curaçao</li>
-		<li class="titles col-xs-3 col-md-3 ">Sweden</li>
-		<li class="titles col-xs-3 col-md-3 ">Malaysia</li>
-		<li class="titles col-xs-3 col-md-3 ">St. Lucia</li>
+		<div class="row">
+			<li class="titles col-xs-6 col-sm-6 col-md-3" >Curaçao</li>
+			<li class="titles col-xs-6 col-sm-6 col-md-3" >Sweden</li>
+			<li class="titles hideForTablet col-md-3">Malaysia</li>
+			<li class="titles hideForTablet col-md-3">St. Lucia</li>
+		</div>
 	</ul>
 </div>
 
 
 <div id="pics">
 	<h1 class="mobileTitles col-xs-12">Curaçao</h1>
-	<img id="pic1" class="col-xs-12 col-md-3 " 
+	<img id="pic1" class="col-xs-12 col-md-3" 
 		 data-description="Curaçao:<br>Home to more than 35 captivating beaches, a diverse heritage spanning 55 different cultures, 'live and let live' attitude and unrivaled European architecture; Curaçao remains one of the most exceptional islands of the region. Its capital city, Willemstad — a UNESCO World Heritage site — with its iconic colorful Handelskade backdrop and roster of museums, monuments, flavorful restaurants and shopping, was selected in 2013 as one of the Top 5 Cities in the Caribbean by Condé Nast Traveler's readers.  Curaçao's natural beauty, pristine diving and snorkeling sites are a favorite with divers and adventure seekers, and its beaches and idyllic weather, situated on the outer fringes of the Hurricane Belt, has won it further accolade and recognition."
 		src="images/curacao.jpg" />
 
 	<h1 class="mobileTitles col-xs-12">Sweden</h1>
-	<img id="pic2" class= "col-xs-12 col-md-3 " 
+	<img id="pic2" class= "col-xs-12 col-md-3" 
 		data-description="Sweden:<br>In some ways, visiting Sweden feels like walking right into a fashion or home-decor magazine. There are no boring outfits on the streets of Stockholm, and the care with which houses, cottages, cafes and public spaces are decorated and kept up throughout the country is truly inspiring. But Swedish style is never too showy; form and function are tightly linked in this society known for valuing moderation, practicality, order, simple lines and clever designs. Whether you decide to shop for your own versions or just enjoy the scenery, it’s hard not to fall for the cool aesthetics of this place."
 		src="images/sweden.png" /> 
 
+	<div id="hideForDesktop">
+		<div class="row">
+			<ul>
+				<li class="titles col-xs-6 col-md-6 ">Malaysia</li>
+				<li class="titles col-xs-6 col-md-6 ">St. Lucia</li>
+			</ul>
+		</div>
+	</div>
+
 	<h1 class="mobileTitles col-xs-12">Malaysia</h1>
-	<img id="pic3" class="col-xs-12 col-md-3 "
+	<img id="pic3" class="col-xs-12 col-md-3"
 		data-description="Malaysia:<br>To know Malaysia is to love Malaysia - a bubbling, bustling melting-pot of races and religions where Malays, Indians, Chinese and many other ethnic groups live together in peace and harmony. Our multiculturalism has made Malaysia a gastronomical paradise and home to hundreds of colourful festivals. It's no wonder that we love celebrating and socialising. As a people, Malaysians are very relaxed, warm and friendly. 
 
 		One of Malaysia's key attractions is its extreme contrasts which further add to this theme of 	‘diversity’. Towering skyscrapers look down upon wooden houses built on stilts while five-star hotels sit just metres away from ancient reefs. 
@@ -69,7 +80,7 @@
 		src="images/kuala.jpg" /> 
 
 	<h1 class="mobileTitles col-xs-12">St. Lucia</h1>
-	<img id="pic4" class="col-xs-12 col-md-3 " 
+	<img id="pic4" class="col-xs-12 col-md-3" 
 		data-description="St. Lucia:<br>Where can you wake up to a symphony of birds and drive through a volcano? Only on St. Lucia island! St. Lucia stands apart from the rest of the Caribbean islands thanks to its varied landscape and diverse culture and cuisine, which is distinguished by African, Indian, Caribbean, British, Spanish and French influences. You can explore everything from the Piton Mountains and rainforest to the Sulphur Springs of Soufriere and the Caribbean coral reef on this 238 square-mile island in paradise. There are so many reasons to choose St. Lucia island!
 		 The active traveler can snorkel in the refreshing Caribbean Sea, hike to the top of the Gros Piton or Petite Piton peaks, or take advantage of a wide range of water sports available at their St. Lucia Resort. The foodie can indulge in fresh local flavors by stopping at roadside stands or dining at five-star restaurants. Romantic couples can relax on the white sand of a pristine beach or in a mud bath before going on a one-of-a-kind date at one of St. Lucia’s music or cultural festivals.  Whatever your preference, your St. Lucia island vacation will be nothing but smooth sailing!"
 		src="images/lucia.jpg" />
@@ -106,34 +117,41 @@
 
 
 <div id="footer">
+		<div class="mail">
+			<h5>Join our mailing list for the best in travel ideas and resources!</h5>
+				<form>
+				
+				<tr>
+					<td>Name:</td>
+					<td><input type="text" id="contactName"></td>
+					
+					<td>Email:</td>
+					<td><input type="email" id="emailInfo"></td>
+				</tr>
+
+				<tr>
+					<td><input type="button" value="Submit" id="submitBtn"/></td>
+				</tr>
+				</form>
+		</div>
+<br>
 	<div id="social">
 		<div class="icons">
-			<a href="http://www.facebook.com"><img src="Icons/Facebook.png"></a>
+			<a href="http://www.facebook.com" target="_blank"><img src="Icons/Facebook.png"></a>
 		</div>
 
 		<div class="icons">
-			<a href="http://www.twitter.com"><img src="Icons/Twitter.png"></a>
+			<a href="http://www.twitter.com" target="_blank"><img src="Icons/Twitter.png"></a>
 		</div>
 
 		<div class="icons">
-			<a href="http://www.instagram.com"><img src="Icons/Instagram.png"></a>
+			<a href="http://www.instagram.com" target="_blank"><img src="Icons/Instagram.png"></a>
 		</div>
 
 		<div class="icons">
-			<a href="http://www.Pinterest.com"><img src="Icons/pinterest.png"></a>
+			<a href="http://www.Pinterest.com" target="_blank"><img src="Icons/pinterest.png"></a>
 		</div>
-
-		<div class="mail">
-			<h5>Join our mailing list for the latest in travel news!</h5>
-				<tr>
-					<td>Email:</td>
-					<td><input type="text"></td>
-				</tr>
-				<tr>
-					<td><input type="button" value="Submit"/></td>
-				</tr>
-			<h6>&copy; Zalini 2015</h6>
-		</div>
+		<h6>&copy; Zalini 2015</h6>
 </div>
 
 
